# turtlesim_MoRo

./: READ.ME  README.txt  turtlesimAutomata.bash  turtlesim_mo_ro.bash
turtlesim_automata/: CMakeLists.txt  package.xml
turtlesim_automata/src/: turtlesim_automata.cpp
turtlesim_mo_ro/: CMakeLists.txt  package.xml
turtlesim_mo_ro/src/: turtlesim_mo_ro.cpp
